# AI_solo_coder_task_B_108

./: docker-compose.yml
backend/: Cargo.toml  Dockerfile  bdf_test.txt  bdf_test2.txt  bdf_test3.txt  bdf_test4.txt  bdf_test_result.txt  build_err.txt  build_output.txt  config.toml  final_test_results.txt  final_ws_test.txt  main_test.txt  pi_test_output.txt  test_output.txt  test_output_final.txt  test_results.txt  test_results2.txt  test_results3.txt  ws_test.txt
backend/crates/excavation-mc/: Cargo.toml
backend/crates/excavation-mc/src/: lib.rs
backend/crates/preservation-index/: Cargo.toml
backend/crates/preservation-index/src/: lib.rs
backend/crates/protection-tree/: Cargo.toml
backend/crates/protection-tree/src/: lib.rs
backend/crates/redox-mapping/: Cargo.toml
backend/crates/redox-mapping/src/: lib.rs
backend/crates/relic-algo/: Cargo.toml
backend/crates/relic-algo/src/: lib.rs
backend/src/: alerts.rs  algorithms.rs  config.rs  database.rs  handlers.rs  lora_gateway.rs  main.rs  models.rs
backend/src/kinetics/: arrhenius.rs  mod.rs
backend/src/lora/: mod.rs  udp.rs
backend/src/ode/: mod.rs  solver.rs
backend/src/services/: alerter.rs  ca_balance.rs  collagen_kinetics.rs  lora_ingest.rs  mod.rs
frontend/: index.html
frontend/css/: style.css
frontend/js/: BoneCloud.js  CorrosionDepth.js  colormap.js  config.js  contour.js  heritage_features.js  main.js  pointcloud.js
influxdb/: docker-compose.yml  init.iql
lora-simulator/: Cargo.toml  Dockerfile
lora-simulator/src/: main.rs
lora-simulator/src/lora/: downlink.rs  mod.rs
