[workspace]
members = [
    ".",
    "crates/relic-algo",
    "crates/redox-mapping",
    "crates/preservation-index",
    "crates/excavation-mc",
    "crates/protection-tree",
]
resolver = "2"

[package]
name = "relic-monitor-backend"
version = "1.0.0"
edition = "2021"
description = "古代骨角质文物埋藏腐蚀界面监测系统后端"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
influxdb = { version = "0.7", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_distr = "0.4"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
urlencoding = "2.1"
futures = "0.3"
parking_lot = "0.12"
actix-files = "0.6"
num_cpus = "1.16"
relic-algo = { path = "crates/relic-algo" }
redox-mapping = { path = "crates/redox-mapping" }
preservation-index = { path = "crates/preservation-index" }
excavation-mc = { path = "crates/excavation-mc" }
protection-tree = { path = "crates/protection-tree" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
